# yukarin_esoso_connector

./: README.md  pyproject.toml  run.py  run_ui.py
src/yukarin_esoso_connector/: __init__.py  forwarder.py  utility.py
