[project]
name = "yukarin-esoso-connector"
version = "0.1.0"
authors = [
    { name = "Hiroshiba", email = "hihokaruta@gmail.com" }
]
description = "English TTS inference connector integrating yukarin_es, yukarin_esad, yukarin_esosoad, and hifi-gan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g2p-en>=2.1.0",
    "librosa>=0.11.0",
    "marimo>=0.18.2",
    "numpy>=2.2.5",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "s3fs>=2025.5.1",
    "scipy>=1.16.0",
    "soundfile>=0.12.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "universal-pathlib>=0.2.6",
    "yukarin-es",
    "yukarin-esad",
    "yukarin-esosoad",
    "hifi-gan",
]

[tool.uv.sources]
yukarin-es = { git = "https://github.com/Hiroshiba/yukarin_es", rev = "d68df1c690fe2c6ba5e0ff7205e0125d93944c1f" }
yukarin-esad = { git = "https://github.com/Hiroshiba/yukarin_esad", rev = "71bfe03d398823119ba9555fd2b5bf768d01e59d" }
yukarin-esosoad = { git = "https://github.com/Hiroshiba/yukarin_esosoad", rev = "b02734ac2ab3e52cac7394af706357330ebbf613" }
hifi-gan = { git = "https://github.com/Hiroshiba/hifi-gan", rev = "8f72015f1e7dfa559119b49143ca72eb585ba72e" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "pyright>=1.1.403",
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "D", "D213", "PT", "NPY"]
ignore = [
    "E501",
    "D400",
    "D403",
]
unfixable = [
    "F401",
    "F841",
]

[tool.ruff.lint.isort]
known-first-party = ["yukarin_esoso_connector"]
known-third-party = ["numpy", "torch"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yukarin_esoso_connector"]
